--- a/dot-files/.tmux.conf
+++ b/dot-files/.tmux.conf
@@ -113,7 +113,7 @@ bind m setw -g mouse on # to toggle the mouse mode
 unbind -n -Tcopy-mode-vi MouseDragEnd1Pane
 bind -Tcopy-mode-vi MouseDragEnd1Pane send -X copy-selection-and-cancel\; run "tmux save-buffer - | xclip -i -sel clipboard > /dev/null"
 
-unbind -T DoubleClick1Pane
+# unbind -T DoubleClick1Pane
 # bind -Tcopy-mode-vi DoubleClick1Pane  send -X select-word \; send -X copy-selection-and-cancel\; run "tmux save-buffer - | xclip -i -sel clipboard > /dev/null"
 
 # Middle click to paste from the clipboard
