--- a/django-blog.conf
+++ b/django-blog.conf
@@ -1,8 +1,8 @@
-Listen 8080
-<VirtualHost *:8080>
+Listen 5000
+<VirtualHost *:5000>
 
-	Alias /static /home/rbhanot/python-dotfiles/python3/django-projects/BlogProject/static_files
-	<Directory /home/rbhanot/python-dotfiles/python3/django-projects/BlogProject/static_files>
+	Alias /static /home/rbhanot/python-dotfiles/python3/django-projects/BlogProject/staticfiles
+	<Directory /home/rbhanot/python-dotfiles/python3/django-projects/BlogProject/staticfiles>
 	Require all granted
 	</Directory>
 
@@ -13,7 +13,7 @@ Require all granted
  </Directory>
 
 	WSGIScriptAlias / /home/rbhanot/python-dotfiles/python3/django-projects/BlogProject/Project/wsgi.py
-	WSGIDaemonProcess blogproject python-home=/home/rbhanot/tools/miniconda3/envs/django-env python-path=/home/rbhanot/python-dotfiles/python3/django-projects/BlogProject
+	WSGIDaemonProcess blogproject python-home=/home/rbhanot/tools/miniconda3/envs/django-env python-path=/home/rbhanot/python-dotfiles/python3/django-projects/BlogProject display-name=%{GROUP}
 	WSGIProcessGroup blogproject
 
 	ErrorLog ${APACHE_LOG_DIR}/error.log
