--- a/dot-files/.tmux.conf
+++ b/dot-files/.tmux.conf
@@ -41,15 +41,8 @@ bind - split-window -v -c "#{pane_current_path}"
 unbind '"'
 unbind %
 
-# switch panes using ctrl-arrow without prefix
-# bind -n C-Left select-pane -L
-# bind -n C-Right select-pane -R
-# bind -n C-Up select-pane -U
-# bind -n C-Down select-pane -D
-
 bind  -n S-Up  swap-pane -U
 bind  -n S-Down  swap-pane -D
-
 
 # resize panes quickyly
 bind -n C-S-Up resize-pane -U 2
@@ -73,7 +66,7 @@ bind -n S-left prev
 # Fast toggle between current and last-used window (normally prefix-l).
 bind l  last-window
 
-# kill window with ctrl-b + k
+# kill window with preifix + k
 bind-key k confirm kill-session
 bind-key K confirm kill-server
 bind-key X confirm kill-window
@@ -128,6 +121,8 @@ bind-key -n MouseUp2Status kill-window -t=
 
 # Double click on the window list to open a new window
 bind-key -n DoubleClick1Status new-window
+
+unbind-key MouseDown3Pane
 
 # UTF8 is autodetected in 2.2 onwards, but errors if explicitly set
 if-shell -b '[ "$(echo "$TMUX_VERSION < 2.2" | bc)" = 1 ]' "set -g utf8 on; set -g status-utf8 on; set -g mouse-utf8 on"
