changes to userProfile

--- a/dot-files/.ideavimrc
+++ b/dot-files/.ideavimrc
@@ -12,6 +12,7 @@ set wrapscan                      " searches wrap around the end of the file
 set number                        " line numbers
 set scrolloff=5 sidescrolloff=10  " keep some lines before and after the cursor visible
 set clipboard=unnamedplus,unnamed " integrate with system clipboard
+set clipboard+=ideaput
 
 " Ideavim Plugins
 set surround
