--- a/dot-files/.tmux.conf
+++ b/dot-files/.tmux.conf
@@ -1,5 +1,5 @@
 # : << ENDOFCONF
-# set -g default-terminal "xterm-256color"
+set -g default-terminal "xterm-256color"
 # remap prefix from 'C-b' to 'C-a'
 unbind C-b
 # set-option -g prefix `
@@ -100,11 +100,12 @@ bind p paste-buffer
 
 # Mouse integration ---------------------------------
 
-bind m setw -g mouse on # to toggle the mouse mode
+bind m setw mouse on # to toggle the mouse mode
+bind M setw mouse off # to toggle the mouse mode
 
 # Selection with mouse should copy to clipboard right away, in addition to the default action.
 unbind -n -Tcopy-mode-vi MouseDragEnd1Pane
-bind -Tcopy-mode-vi MouseDragEnd1Pane send -X copy-selection-and-cancel\; run "tmux save-buffer - | xclip -i -sel clipboard > /dev/null"
+bind -Tcopy-mode-vi MouseDragEnd1Pane send -X copy-selection-and-cancel \; run "tmux save-buffer - | xclip -i -sel clipboard > /dev/null"
 
 # unbind -T DoubleClick1Pane
 # bind -Tcopy-mode-vi DoubleClick1Pane  send -X select-word \; send -X copy-selection-and-cancel\; run "tmux save-buffer - | xclip -i -sel clipboard > /dev/null"
@@ -161,7 +162,7 @@ set -g @plugin 'christoomey/vim-tmux-navigator'
 # check file exists before sourcing it in tmux.conf
 # if-shell "test -f ~/.tmux/tmuxline.vim" "source ~/.tmux/tmuxline.vim"
 
-set -g @plugin "arcticicestudio/nord-tmux"
+# set -g @plugin "arcticicestudio/nord-tmux"
 
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
@@ -170,8 +171,8 @@ run -b	'~/.tmux/plugins/tpm/tpm'
 
 # Pane colors
 # set inactive/active window styles
-set -g window-style 'fg=colour245,bg=colour236'
-set -g window-active-style 'fg=colour252,bg=colour236'
+# set -g window-style 'fg=colour245,bg=colour236'
+# set -g window-active-style 'fg=colour252,bg=colour236'
 
 #-------------------------------------------------------#
 # Default inactive/active window styles
@@ -182,9 +183,40 @@ set -g window-active-style 'fg=colour252,bg=colour236'
 
 
 # Pane border
-set -g pane-border-bg colour235
+# set -g pane-border-bg colour235
+# set -g pane-border-fg colour238
+# set -g pane-active-border-bg colour236
+# set -g pane-active-border-fg colour39
+
+# status bar theme
+
+# https://gist.github.com/rajanand02/9407361
+set -g status-bg colour235
+set -g message-command-fg colour222
+set -g status-justify 'centre'
+set -g status-left-length '100'
+set -g status 'on'
+set -g pane-active-border-fg colour154
+set -g message-bg colour238
+set -g status-right-length '100'
+set -g status-right-attr 'none'
+set -g message-fg colour222
+set -g message-command-bg 'colour238'
+set -g status-attr 'none'
 set -g pane-border-fg colour238
-set -g pane-active-border-bg colour236
-set -g pane-active-border-fg colour39
+set -g status-left-attr 'none'
+setw -g window-status-fg colour121
+setw -g window-status-attr 'none'
+setw -g window-status-activity-bg colour235
+setw -g window-status-activity-attr 'none'
+setw -g window-status-activity-fg colour154
+setw -g window-status-separator ''
+setw -g window-status-bg colour235
+set -g status-left '#[fg=colour232,bg=colour154] #S #[fg=colour154,bg=colour238,nobold,nounderscore,noitalics]#[fg=colour222,bg=colour238] #W #[fg=colour238,bg=colour235,nobold,nounderscore,noitalics]#[fg=colour121,bg=colour235] #(whoami)  #(uptime  | cut -d " " -f 1,2,3) #[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]'
+set -g status-right '#[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]#[fg=colour121,bg=colour235] %r  %a  %Y #[fg=colour238,bg=colour235,nobold,nounderscore,noitalics]#[fg=colour222,bg=colour238] #H #[fg=colour154,bg=colour238,nobold,nounderscore,noitalics]#[fg=colour232,bg=colour154] #(rainbarf --battery --remaining --no-rgb) '
+setw -g window-status-format '#[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]#[default] #W #[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]'
+setw -g window-status-current-format '#[fg=colour235,bg=colour238,nobold,nounderscore,noitalics]#[fg=colour222,bg=colour238] #W  #F #[fg=colour238,bg=colour235,nobold,nounderscore,noitalics]'
+
+
 
 # ENDOFCONF
