--- a/dot-files/.local_settings_rc
+++ b/dot-files/.local_settings_rc
@@ -125,3 +125,4 @@ source $(which virtualenvwrapper.sh)
 export PYENV_ROOT="$HOME/.pyenv"
 export PATH="$PYENV_ROOT/bin:$PATH"
 eval "$(pyenv init -)"
+VIRTUALENVWRAPPER_PYTHON=/usr/bin/python
